fix menu on safari

--- a/assets/sass/_style.sass
+++ b/assets/sass/_style.sass
@@ -118,9 +118,11 @@
                                 font-weight: bold
                     li:first-child span
                         text-indent: space(-1000)
+                        color: transparent
                         padding-top: 0
                         padding-bottom: 0
                         padding-left: space(4)
+                        width: space(12)
                         &::before
                             text-indent: 0
                             margin-top: 3px
